@@ -12,10 +12,12 @@
 #include "gst-fluendo.h"
 
 #include "gstttmlparse.h"
+#include "gstttmlrender.h"
 #include "gstttmltype.h"
 
 GST_DEBUG_CATEGORY (ttmlbase_debug);
 GST_DEBUG_CATEGORY (ttmlparse_debug);
+GST_DEBUG_CATEGORY (ttmlrender_debug);
 #define GST_CAT_DEFAULT ttmlbase_debug
 
 static gboolean
@@ -27,9 +29,16 @@ plugin_init (GstPlugin * plugin)
   GST_DEBUG_CATEGORY_INIT (ttmlparse_debug, "ttmlparse",
       GST_DEBUG_BOLD | GST_DEBUG_FG_WHITE,
       "Fluendo TTML parser");
+  GST_DEBUG_CATEGORY_INIT (ttmlrender_debug, "ttmlrender",
+      GST_DEBUG_BOLD | GST_DEBUG_FG_WHITE,
+      "Fluendo TTML renderer");
 
   if (!gst_element_register (plugin, "ttmlparse", GST_RANK_MARGINAL,
           gst_ttmlparse_get_type ()))
+    return FALSE;
+
+  if (!gst_element_register (plugin, "ttmlrender", GST_RANK_MARGINAL,
+          gst_ttmlrender_get_type ()))
     return FALSE;
 
   gst_ttmltype_init (plugin);
