@@ -1,0 +1,74 @@
+/*
+ * FLUENDO S.A.
+ * Copyright (C) <2014>  <support@fluendo.com>
+ */
+
+#ifdef HAVE_CONFIG_H
+#include "config.h"
+#endif
+
+#include <string.h>
+
+#include <libxml/parser.h>
+#include <gst/gstconfig.h>
+
+#include "gstttmlbase.h"
+#include "gstttmlrender.h"
+#include "gstttmlstate.h"
+#include "gstttmltype.h"
+#include "gstttmlspan.h"
+#include "gstttmlevent.h"
+#include "gstttmlattribute.h"
+#include "gstttmlutils.h"
+
+GST_DEBUG_CATEGORY_EXTERN (ttmlrender_debug);
+#define GST_CAT_DEFAULT ttmlrender_debug
+
+#if GST_CHECK_VERSION (1,0,0)
+#define GST_TTMLRENDER_SRC_CAPS "video/x-raw,format=RGBA"
+#else
+#define GST_TTMLRENDER_SRC_CAPS "video/x-raw-rgb"
+#endif
+
+static GstStaticPadTemplate ttmlrender_src_template =
+    GST_STATIC_PAD_TEMPLATE ("src",
+    GST_PAD_SRC,
+    GST_PAD_ALWAYS,
+    GST_STATIC_CAPS (GST_TTMLRENDER_SRC_CAPS)
+    );
+
+G_DEFINE_TYPE (GstTTMLRender, gst_ttmlrender, GST_TYPE_TTMLBASE);
+#define parent_class gst_ttmlrender_parent_class
+
+static GstBuffer *
+gst_ttmlrender_gen_buffer (GstTTMLBase *base)
+{
+  GST_FIXME ("Unimplemented.");
+  return NULL;
+}
+
+static void
+gst_ttmlrender_class_init (GstTTMLRenderClass * klass)
+{
+  GstTTMLBaseClass *base_klass = GST_TTMLBASE_CLASS (klass);
+
+  parent_class = GST_TTMLBASE_CLASS (g_type_class_peek_parent (klass));
+
+  /* Here we register a Pad Template called "src" which the base class will
+   * use to instantiate the src pad. */
+  gst_element_class_add_pad_template (GST_ELEMENT_CLASS (klass),
+      gst_static_pad_template_get (&ttmlrender_src_template));
+
+  gst_element_class_set_details_simple (GST_ELEMENT_CLASS (klass),
+    "TTML subtitle renderer",
+    "Codec/Render/Subtitle",
+    "Render TTML subtitle streams into a video stream",
+    "Fluendo S.A. <support@fluendo.com>");
+
+  base_klass->gen_buffer = GST_DEBUG_FUNCPTR (gst_ttmlrender_gen_buffer);
+}
+
+static void
+gst_ttmlrender_init (GstTTMLRender * render)
+{
+}
